tests/analysis/snapshots/r#mod__analysis__alpha050__comparison_with_array_literal-3.snap
---
source: tests/analysis/alpha050.rs
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [],
}
