tests/analysis/snapshots/r#mod__analysis__alpha050__comparison_with_text_literal-2.snap
---
source: tests/analysis/alpha050.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun starts_with_a(word: Text): Bool",
    "word: Text",
    "word: Text",
]
