tests/analysis/snapshots/r#mod__analysis__alpha050__failure_handlers-2.snap
---
source: tests/analysis/alpha050.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "code: Int",
    "code: Int",
    "code: Int",
    "code: Int",
]
